frontend/app/css/page-todo.css
#container-todo {
  text-align: center;
}

.group-section {
  text-align: left;
  & + & {
    margin-top: 10rem;
  }
  h2 {
    text-align: left;
    margin: 0 0 2rem -1rem;
    padding: 1rem 4rem 1rem 0.5rem;
    display: inline-block;
    border-style: dashed;
    border-top-width: 1px;
    border-right-width: 1px;
    border-bottom-width: 1px;
    border-top-right-radius: 1rem;
    border-bottom-right-radius: 1rem;
    @media (min-width: 1601px) {
      border-left-width: 1px;
      padding-left: 1rem;
    }
  }
}

.todos-container {
  text-align: left;
  display: grid;
  gap: 4rem 2rem;
  grid-template-columns: 1fr;
}

/* tablet */
@media (min-width: 640px) {
  .todos-container {
    grid-template-columns: 1fr 1fr;
  }

  /* 3 column sections */
  .todos-container:has(> .todo-section:first-of-type:nth-last-of-type(3)) {
    grid-template-columns: 1fr 1fr !important;
  }

  /* 2 column sections */
  .todos-container:has(> .todo-section:first-of-type:nth-last-of-type(2)) {
    grid-template-columns: 1fr 1fr !important;
  }

  /* 1 column sections */
  .todos-container:has(> .todo-section:only-of-type) {
    grid-template-columns: 1fr !important;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
  }
}

/* small desktop */
@media (min-width: 900px) {
  .todos-container {
    grid-template-columns: 1fr 1fr 1fr;
  }
  /* 3 column sections */
  .todos-container:has(> .todo-section:first-of-type:nth-last-of-type(3)) {
    grid-template-columns: 1fr 1fr 1fr !important;
  }
  /* 2 column sections */
  .todos-container:has(> .todo-section:first-of-type:nth-last-of-type(2)) {
    grid-template-columns: 1fr 1fr !important;
  }
  /* 1 column sections */
  .todos-container:has(> .todo-section:only-of-type) {
    grid-template-columns: 1fr !important;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
  }
}

/* large desktop */
@media (min-width: 1100px) {
  .todos-container {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
  /* 3 column sections */
  .todos-container:has(> .todo-section:first-of-type:nth-last-of-type(3)) {
    grid-template-columns: 1fr 1fr 1fr !important;
  }
  /* 2 column sections */
  .todos-container:has(> .todo-section:first-of-type:nth-last-of-type(2)) {
    grid-template-columns: 1fr 1fr !important;
  }
  /* 1 column sections */
  .todos-container:has(> .todo-section:only-of-type) {
    grid-template-columns: 1fr !important;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
  }
}

.todo-section {
  display: grid;
  grid-template-columns: 1fr;
  align-items: start;
  align-content: start;
  gap: 1rem;
  grid-row: span 2;
  grid-template-rows: subgrid;
  * {
    word-wrap: break-word;
    overflow-wrap: break-word;
    word-break: break-word;
  }
  .layout-everything &,
  .layout-recurring & {
    grid-row: auto;
    grid-template-rows: none;
  }
}

.todo-section h3 {
  text-align: left;
  margin-bottom: 0;
  &:has(button) {
    display: flex;
    gap: 0.5rem;
    align-items: center;
    button {
      opacity: 0;
      .todo-section h3:hover & {
        opacity: 1;
      }
    }
  }
}

.todos-list {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  li.completed {
    opacity: 0.3;
  }
  li.worked-on {
    opacity: 0.3;
    text-decoration: line-through;
    .cookie-icon {
      display: none;
    }
  }
  .layout-roulette &:has(li:only-of-type) {
    display: block;
    text-align: center;
    li {
      display: inline-block;
      .todo-actions {
        opacity: 1;
      }
    }
  }
}

.todo-item-main {
  display: flex;
  gap: 0.5rem;
  align-items: center;
  line-height: 1.2rem;
  label {
    cursor: pointer;
  }
  .cookie-icon {
    cursor: pointer;
  }
  .skip-recurring-icon {
    cursor: pointer;
  }
}

.todo-description {
  border-style: dashed;
  border-width: 1px;
  border-width: 1px;
  padding: 0.5rem 0.7rem;
  margin: 0.5rem 0 0.5rem 2rem;
}

.todo-due-date {
  &:before {
    content: " ";
  }
}

.todo-actions {
  display: flex;
  gap: 0.25rem;
  justify-self: start;
  justify-content: start;
  flex: 1;
  opacity: 0;
  .todo-item-main:hover & {
    opacity: 1;
  }
}

.todo-item-recurring-review {
  .recurrence-prefix {
    font-weight: 600;
  }
  .todo-actions {
    opacity: 1;
  }
}

@media (hover: none) and (pointer: coarse) {
  .todo-item-main {
    gap: 1rem;
  }
  .todo-actions {
    opacity: 1;
    gap: 1rem;
  }
  h3:has(button) button {
    opacity: 1;
  }
}

.todo-form,
.project-form {
  text-align: left;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  .todo-form-element {
    position: relative;
  }
  label:not(:has(input[type="checkbox"])) {
    display: none;
  }
  .labelled label:not(:has(input[type="checkbox"])) {
    display: block;
  }
  label:has(input[type="checkbox"]) {
    display: flex;
    gap: 0.5rem;
    align-items: center;
    line-height: 1.2rem;
  }
  input:not([type="checkbox"]),
  textarea,
  select {
    width: 100%;
    display: block;
  }
}

/* Recent Stats Pie Chart */
.recent-stats-section {
  max-width: 600px;
  margin: 0 auto;
  width: 100%;
  h4 {
    text-align: center;
  }
}

.pie-chart-container {
  min-height: 235px;
}

.pie-chart-label {
  font-size: 0.775rem;
}

@media (min-width: 900px) {
  .recent-stats-section {
    max-width: 800px;
  }
}

/* done view */

.layout-done {
  .todos-list li {
    opacity: 0.4;
  }
  .todo-description,
  .cookie-icon,
  .skip-recurring-icon {
    display: none;
  }
}

